View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0033557 | Open CASCADE | OCCT:Coding | public | 2023-12-18 14:49 | 2024-07-18 21:22 |
Reporter | dpasukhi | Assigned To | dpasukhi | ||
Priority | normal | Severity | major | ||
Status | verified | Resolution | fixed | ||
Platform | Mac | OS | OS | ||
Target Version | 7.8.1 | ||||
Summary | 0033557: Coding - Cocoa compilation problem | ||||
Description | compilation fails in M1 Pro Mac , xcode 13.3 , macos 13.4[ 60%] Linking CXX shared library ../../mac64/clang/lib/libTKViewerTest.dylib ld: warning: option -s is obsolete and being ignored Undefined symbols for architecture arm64: "_ViewerTest_myViews", referenced from: FindViewId(NSWindow const*) in ViewerTest_ViewerCommands_1.mm.o -[Cocoa_WindowController windowWillClose:] in ViewerTest_ViewerCommands_1.mm.o ld: symbol(s) not found for architecture arm64 clang: error: linker command failed with exit code 1 (use -v to see invocation) make[2]: *** [mac64/clang/lib/libTKViewerTest.7.8.0.dylib] Error 1 make[1]: *** [src/TKViewerTest/CMakeFiles/TKViewerTest.dir/all] Error 2 make[1]: *** Waiting for unfinished jobs.... [ 68%] Built target TKDEIGES [ 97%] Built target TKDESTEP | ||||
Steps To Reproduce | Not required | ||||
Tags | No tags attached. | ||||
Test case number | |||||
|
Branch CR33557 has been created by dpasukhi. SHA-1: 94985ad7639edfb95e21b3126595027c763d7ad4 Detailed log of new commits: Author: dpasukhi Date: Mon Dec 18 11:50:25 2023 +0000 0033557: Coding - Cocoa compilation problem Fixed extern relation for VisTest component on MacOS |
|
Dear bugmaster, please integrate: OCCT: CR33557 |
|
Combination - OCCT branch : IR-2023-12-22 master SHA - 5c9480638558bd1b4528669b1eb4859cadd9a257 d2ef868da4165400c82322bd7f11b652decce47a Products branch : IR-2023-12-22 SHA - d905a754c332d70a065c12a268be47676ea2c6a9 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Ubuntu2004-64: OCCT Total CPU difference: 18633.43999999986 / 18269.079999999904 [+1.99%] Products Total CPU difference: 11763.979999999934 / 11554.499999999949 [+1.81%] Windows-64-VC142: OCCT Total CPU difference: 20136.3125 / 20132.90625 [+0.02%] Products Total CPU difference: 13131.234375 / 12359.828125 [+6.24%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR33557 has been deleted by dpasukhi. SHA-1: 94985ad7639edfb95e21b3126595027c763d7ad4 |
occt: master 2ff52a18 2023-12-18 11:50:25 Committer: vglukhik Details Diff |
0033557: Coding - Cocoa compilation problem Fixed extern relation for VisTest component on MacOS |
Affected Issues 0033557 |
|
mod - src/ViewerTest/ViewerTest_ViewerCommands.cxx | Diff File | ||
occt: master 656b0d21 2023-12-18 11:50:25 Details Diff |
0033557: Coding - Cocoa compilation problem Fixed extern relation for VisTest component on MacOS |
Affected Issues 0033557 |
|
mod - src/ViewerTest/ViewerTest_ViewerCommands.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2023-12-18 14:49 | dpasukhi | New Issue | |
2023-12-18 14:49 | dpasukhi | Assigned To | => dpasukhi |
2023-12-18 14:53 | git | Note Added: 0114792 | |
2023-12-22 15:16 | dpasukhi | Status | new => resolved |
2023-12-22 15:16 | dpasukhi | Steps to Reproduce Updated | |
2023-12-22 15:17 | dpasukhi | Assigned To | dpasukhi => bugmaster |
2023-12-22 15:17 | dpasukhi | Status | resolved => reviewed |
2023-12-22 15:17 | dpasukhi | Note Added: 0114838 | |
2024-01-05 01:52 | vglukhik | Note Added: 0114859 | |
2024-01-05 01:54 | vglukhik | Changeset attached | => occt master 2ff52a18 |
2024-01-05 01:54 | dpasukhi | Assigned To | bugmaster => dpasukhi |
2024-01-05 01:54 | dpasukhi | Status | reviewed => verified |
2024-01-05 01:54 | dpasukhi | Resolution | open => fixed |
2024-01-17 15:32 | dpasukhi | Changeset attached | => occt master 656b0d21 |
2024-07-18 21:22 | git | Note Added: 0116246 |