0033557: Coding - Cocoa compilation problem

Fixed extern relation for VisTest component on MacOS